[1883] fix: modal panel not centered vertically on scroll (#1122)
* fix: modal panel not centered vertically on scroll

* fix: optimized for small screens

* fix: moving overflow visible to bigger monitors only

--- a/admin/src/assets/styles/common/_global.scss
+++ b/admin/src/assets/styles/common/_global.scss
@@ -61,7 +61,7 @@ body {
 			@include posZero;
 			left: 160px; // WP admin menu width
 			content: "";
-			position: absolute;
+			position: fixed;
 			z-index: 9998;
 			background-color: #24292f;
 			opacity: 0.6;
